src/stylesheets/nav.css
.nav-colored {
  background-color: var(--color-black);
  transition: 0.3s ease-in-out;
}

.nav-transparent {
  background-color: transparent;
  transition: 0.3s ease-in-out;
}

#sticky-nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: top 0.2s ease-in-out;
}

#sticky-nav.closed {
  top: -4rem;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0.5rem var(--side-gutter);
}

/* @media (min-width: 768px) {
  .header {
    margin: 0 var(--side-gutter);
  }
} */

.header ul {
  margin: 0;
  padding: 0;
  list-style: none;
  overflow: hidden;
}

/* menu */

.header .menu {
  max-width: 0;
  height: 100vh;
  transition: max-width 0.2s ease-out;
  top: 0;
  right: 0;
  position: absolute;
  display: block;
  background-color: var(--color-black);
  width: 100%;
  text-align: left;
  font-size: 1.5rem;
  font-family: "Surt Regular";
}

.header .menu .menu-items-container {
  margin-top: 4rem;
}

.header .menu .menu-items-container.large {
  font-family: "Surt SemiBold Extended";
  font-size: 2rem;
}

.header .menu li {
  margin: 0.75rem calc(var(--side-gutter) * 0.75);
}

.menu li :hover {
  color: var(--color-light-grey);
}

/* menu icon */

.header .menu-icon {
  cursor: pointer;
  display: inline-block;
  padding: 1.5rem 1rem;
  position: relative;
  user-select: none;
}

.header .menu-icon .navicon {
  background: var(--color-white);
  display: block;
  height: 3px;
  position: relative;
  transition: background 0.2s ease-out;
  width: 2rem;
}

@media (min-width: 2560px) {
  .header .menu-icon .navicon {
    width: 1.5rem;
  }
}

.header .menu-icon .navicon:before,
.header .menu-icon .navicon:after {
  background: var(--color-white);
  content: "";
  display: block;
  height: 100%;
  position: absolute;
  transition: all 0.2s ease-out;
  width: 100%;
}

.header .menu-icon .navicon:before {
  top: 10px;
}

.header .menu-icon .navicon:after {
  top: -10px;
}

/* menu btn */

.header .menu-btn {
  display: none;
}

.header .menu-btn:checked ~ .menu {
  max-width: 100vw;
  height: 100vh;
  overflow-y: auto;
}

@media (min-width: 768px) {
  .header .menu-btn:checked ~ .menu {
    max-width: 50vw;
  }
}

.header .menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

.header .menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

.header .menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

/* 48em = 768px */

/* @media (min-width: 768px) {
  .header .menu {
    max-width: none;
    display: flex;
    align-items: center;
    gap: 1.5rem;
    position: unset;
    width: auto;
    padding: 1rem 0;
    background-color: unset;
  }
  .header .menu-icon {
    display: none;
  }
  .header .menu li {
    padding: revert;
    border-top: revert;
  }
} */

.footer {
  padding: 1rem var(--side-gutter);
}

.footer nav ul {
  display: block;
}

.footer nav > * + * {
  margin-top: 3rem;
}

.footer nav ul > li + li {
  margin-top: 1rem;
}

@media (min-width: 1024px) {
  .footer nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .footer nav ul {
    display: flex;
    align-items: center;
    gap: 1.5rem;
  }

  .footer nav ul > li + li {
    margin-top: revert;
  }

  .footer nav > * + * {
    margin-top: revert;
  }
}

